CKS/mock/01/solutions/Q8/to-prod-db-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: to-prod-db-policy
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: prod
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: stage
      podSelector:
        matchLabels:
          role: db-connect
  - from:
    - podSelector:
        matchLabels:
          role: db-external-connect
